--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit 
-pandas 
-numpy 
-scikit-learn 
-joblib 
+joblib==1.4.2
+streamlit==1.37.0
+scikit-learn==1.5.1
+pandas==2.2.2
+numpy==1.26.4
